--- a/app/src/client/styles/common.css
+++ b/app/src/client/styles/common.css
@@ -1,11 +1,38 @@
+body {
+  margin: 0;
+}
+
 .clickable {
   cursor: pointer;
 }
 
-.panel-header.clickable:hover {
-  text-decoration: underline;
+.panel {
+  border: 1px solid black;
+  margin: 1em;
+
+  &.collapsed .panel-body {
+    display: none;
+  }
 }
 
-.panel.collapsed .panel-body {
-  display: none;
+.panel-header {
+  padding: 1em;
+  background: #ddd;
+
+  &.clickable:hover {
+    text-decoration: underline;
+  }
+}
+
+.panel-body {
+  border-top: 1px solid black;
+  padding: 1em;
+}
+
+.field {
+  & label,
+  & input:not([type='checkbox']),
+  & select {
+    display: block;
+  }
 }
