--- a/app/src/client/styles/index.css
+++ b/app/src/client/styles/index.css
@@ -1,4 +1,7 @@
 @import "font-awesome";
+@import "./layout";
 @import "./common";
 @import "./header";
+@import "./emulator";
+@import "./settings";
 @import "./about";
