--- a/app/src/client/styles/header.css
+++ b/app/src/client/styles/header.css
@@ -1,7 +1,7 @@
 header {
   border-bottom: 1px solid black;
 
-  &:after {
+  &::after {
     visibility: hidden;
     display: block;
     font-size: 0;
