Add action to delete NVRAMs

--- a/app/src/client/styles/settings.css
+++ b/app/src/client/styles/settings.css
@@ -7,3 +7,12 @@
     margin: 50% 0%;
   }
 }
+
+.reset-row {
+  display: table-row;
+
+  & > * {
+    display: table-cell;
+    padding: 0.5em;
+  }
+}
