--- a/app/src/client/styles/common.css
+++ b/app/src/client/styles/common.css
@@ -49,3 +49,41 @@
   border-top: 1px solid black;
   padding: 1em;
 }
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.4);
+}
+
+.modal {
+  display: inline-block;
+  border: 1px solid black;
+  background: white;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.modal-header,
+.modal-body,
+.modal-footer {
+  padding: 0.25em;
+}
+
+.modal-header button {
+  float: right;
+}
+
+.modal-title {
+  display: inline-block;
+  margin: 0;
+}
+
+.modal-footer {
+  text-align: right;
+}
