--- a/app/src/client/styles/emulator.css
+++ b/app/src/client/styles/emulator.css
@@ -1,3 +1,13 @@
+.emulator {
+  display: flex;
+  justify-content: center;
+}
+
+.emulator-output {
+  align-self: center;
+}
+
 .fps-counter {
   display: inline-block;
+  margin-left: 1em;
 }
