--- a/app/src/client/styles/layout.css
+++ b/app/src/client/styles/layout.css
@@ -1,4 +1,7 @@
-html, body, #root, .app {
+html,
+body,
+#root,
+.app {
   height: 100%;
 }
 
@@ -11,7 +14,8 @@ body {
   flex-direction: column;
 }
 
-header, main {
+header,
+main {
   flex-shrink: 0;
 }
 
