--- a/app/src/client/styles/emulator.css
+++ b/app/src/client/styles/emulator.css
@@ -1,6 +1,13 @@
 .emulator {
   display: flex;
   justify-content: center;
+  position: relative;
+}
+
+.emulator-controls {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .emulator-output {
