--- a/app/src/client/styles/common.css
+++ b/app/src/client/styles/common.css
@@ -6,9 +6,19 @@
   cursor: pointer;
 }
 
-.button.active {
-  background: black;
-  color: white;
+.button {
+  position: relative;
+  border: 1px solid gray;
+
+  &.active {
+    background: black;
+    color: white;
+  }
+
+  &:hover .tooltip {
+    display: block;
+    animation: fadeInFromNone 0.5s ease-out;
+  }
 }
 
 .button-group {
@@ -119,4 +129,101 @@
   }
 }
 
+.tooltip {
+  background: black;
+  color: white;
+  border-radius: 0.25em;
+  position: absolute;
+  padding: 0.5em;
+  display: none;
+  opacity: 0.8;
+  white-space: nowrap;
+  z-index: 100;
+  pointer-events: none;
 
+  &:before {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    border: 0.5em solid transparent;
+  }
+
+  &.top,
+  &.top:before,
+  &.bottom,
+  &.bottom:before {
+    left: 50%;
+    transform: translate(-50%, 0);
+  }
+
+  &.left,
+  &.left:before,
+  &.right,
+  &.right:before {
+    top: 50%;
+    transform: translate(0, -50%);
+  }
+
+  &.top {
+    bottom: 100%;
+    margin-bottom: 0.5em;
+
+    &:before {
+      bottom: -0.4em;
+      border-bottom-width: 0;
+      border-top-color: black;
+    }
+  }
+
+  &.bottom {
+    top: 100%;
+    margin-top: 0.5em;
+
+    &:before {
+      top: -0.4em;
+      border-top-width: 0;
+      border-bottom-color: black;
+    }
+  }
+
+  &.right {
+    left: 100%;
+    margin-left: 0.5em;
+
+    &:before {
+      left: -0.4em;
+      border-left-width: 0;
+      border-right-color: black;
+    }
+  }
+
+  &.left {
+    right: 100%;
+    margin-right: 0.5em;
+
+    &:before {
+      right: -0.4em;
+      border-right-width: 0;
+      border-left-color: black;
+    }
+  }
+}
+
+
+@keyframes fadeInFromNone {
+  0% {
+      display: none;
+      opacity: 0;
+  }
+
+  50% {
+      display: block;
+      opacity: 0;
+  }
+
+  100% {
+      display: block;
+      opacity: 0.8;
+  }
+}
