Refactor common components

--- a/app/src/client/components/common/Button.css
+++ b/app/src/client/components/common/Button.css
@@ -11,4 +11,9 @@
     display: block;
     animation: fadeInFromNone 0.5s ease-out;
   }
+
+  &:focus {
+    outline: none;
+    border-color: blue;
+  }
 }
