--- a/app/src/client/components/common/Popup.css
+++ b/app/src/client/components/common/Popup.css
@@ -4,5 +4,5 @@
   z-index: 50;
   background: white;
   border-radius: 0.5em;
-  box-shadow: 0px 0px 2px 0px black;
+  box-shadow: 0 0 2px 0 black;
 }
