--- a/app/src/client/components/settings/Settings.css
+++ b/app/src/client/components/settings/Settings.css
@@ -61,11 +61,11 @@
     padding-left: 0.25em;
   }
 
-  & span {
+  & > span {
     padding: 0 0.25em;
   }
 
-  & button {
+  & > button {
     background: none;
     border: 1px solid transparent;
     border-radius: 0.25em;
