--- a/app/src/client/components/header/Header.css
+++ b/app/src/client/components/header/Header.css
@@ -4,6 +4,14 @@ header {
   flex-flow: wrap;
   border-bottom: 1px solid black;
 
+  @nest .light-theme & {
+    background: white;
+  }
+
+  @nest .dark-theme & {
+    background: #333;
+  }
+
   & .toolbar {
     margin: 0 1em;
   }
@@ -29,6 +37,7 @@ header {
   }
 }
 
-.navigation-help {
+#theme-switch {
   margin-left: auto;
+  margin-right: 1em;
 }
