--- a/app/src/client/components/about/About.css
+++ b/app/src/client/components/about/About.css
@@ -1,11 +1,10 @@
-.about-logo,
-.about-text {
+.about-section {
   display: inline-block;
   width: 50%;
   padding: 1em;
   vertical-align: top;
 }
 
-.about-logo img {
+.about-logo {
   max-height: 30em;
 }
