--- a/app/src/client/components/emulator/Emulator.css
+++ b/app/src/client/components/emulator/Emulator.css
@@ -7,7 +7,7 @@
 
 .emulator-error {
   position: absolute;
-  top: 0;
+  top: 1em;
   right: 25%;
   left: 25%;
 }
@@ -24,37 +24,4 @@
 
 #emulator-file {
   display: none;
-}
-
-.fps-counter {
-  display: inline-block;
-  margin-left: 1em;
-}
-
-#emulator-toolbar-volume {
-  position: relative;
-}
-
-.volume-icon {
-  &.fa-stack {
-    width: 1em;
-    height: 1em;
-    line-height: 1;
-  }
-
-  & .fa-ban {
-    color: red;
-  }
-}
-
-#volume-popup {
-  top: 100%;
-  left: 50%;
-  margin-top: 0.5em;
-  transform: translate(-50%, 0);
-
-  & input[type="range"] {
-    transform: rotate(-90deg);
-    margin: 50% 0%;
-  }
 }
