--- a/app/src/client/components/about/About.css
+++ b/app/src/client/components/about/About.css
@@ -1,10 +1,10 @@
 .about-section {
   display: inline-block;
   width: 50%;
-  padding: 1em;
+  padding: 1rem;
   vertical-align: top;
 }
 
 .about-logo {
-  max-height: 30em;
+  max-height: 30rem;
 }
