--- a/app/src/client/components/common/Message.css
+++ b/app/src/client/components/common/Message.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  padding: 0.25em;
-  border-radius: 0.25em;
+  padding: 0.25rem;
+  border-radius: 0.25rem;
 
   &.info {
     border: 1px solid cornflowerblue;
@@ -29,7 +29,7 @@
 }
 
 .message-close {
-  margin-left: 0.25em;
+  margin-left: 0.25rem;
   border: none;
   background: none;
   opacity: 0.7;
