--- a/app/src/client/components/common/Panel.css
+++ b/app/src/client/components/common/Panel.css
@@ -6,16 +6,16 @@
   }
 
   & + .panel {
-    margin-top: 1em;
+    margin-top: 1rem;
   }
 }
 
 .panel-header {
-  padding: 1em;
+  padding: 1rem;
   background: #ddd;
 }
 
 .panel-body {
   border-top: 1px solid black;
-  padding: 1em;
+  padding: 1rem;
 }
