--- a/app/src/client/components/common/Popup.css
+++ b/app/src/client/components/common/Popup.css
@@ -1,8 +1,8 @@
 .popup {
   position: absolute;
-  padding: 1em;
+  padding: 1rem;
   z-index: 50;
   background: white;
-  border-radius: 0.5em;
+  border-radius: 0.5rem;
   box-shadow: 0 0 2px 0 black;
 }
