--- a/app/src/client/components/emulator/Emulator.css
+++ b/app/src/client/components/emulator/Emulator.css
@@ -7,15 +7,15 @@
 
 .emulator-error {
   position: absolute;
-  top: 1em;
+  top: 1rem;
   right: 25%;
   left: 25%;
 }
 
 .emulator-controls {
   position: absolute;
-  top: 1em;
-  left: 1em;
+  top: 1rem;
+  left: 1rem;
 }
 
 .emulator-output {
