Separate EmulatorToolbar container

--- a/app/src/client/components/common/ButtonGroup.css
+++ b/app/src/client/components/common/ButtonGroup.css
@@ -1,4 +1,16 @@
 .button-group {
   display: inline-block;
   margin: 0 0.25rem;
+
+  & > .button {
+    &:not(:first-of-type) {
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+    }
+
+    &:not(:last-of-type) {
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+    }
+  }
 }
