--- a/app/src/client/components/common/Button.css
+++ b/app/src/client/components/common/Button.css
@@ -1,14 +1,35 @@
+:root {
+  --button-active-shadow: inset 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.2);
+  --button-focus-shadow: 0 0 0.1rem 0.05rem #004fff;
+}
+
 .button {
   position: relative;
   border: 1px solid gray;
+  background: #ddd;
+  padding: 0.5rem 0.75rem;
+  border-radius: 0.25rem;
+  color: black;
 
-  &.active {
-    background: black;
-    color: white;
+  &:disabled {
+    pointer-events: none;
+    color: gray;
+  }
+
+  &.active,
+  &:active {
+    box-shadow: var(--button-active-shadow);
+    background: #ccc;
+
+    &:focus {
+      box-shadow: var(--button-active-shadow), var(--button-focus-shadow);
+    }
   }
 
   &:focus {
     outline: none;
-    border-color: blue;
+    box-shadow: var(--button-focus-shadow);
+    z-index: 1;
   }
 }
+
