--- a/app/src/client/components/settings/controls/ControlsSettings.css
+++ b/app/src/client/components/settings/controls/ControlsSettings.css
@@ -1,5 +1,5 @@
 .controls-settings {
-  & .panel-body > *:not(:first-child) {
+  & .panel-body > *:not(:first-child, .modal-overlay) {
     margin-top: 1rem;
   }
 }
