--- a/app/src/client/components/settings/audio/AudioVolumeField.css
+++ b/app/src/client/components/settings/audio/AudioVolumeField.css
@@ -1,9 +1,5 @@
 .audio-volume-field {
   display: inline-block;
   text-align: center;
-
-  & input {
-    transform: rotate(-90deg);
-    margin: 50% 0%;
-  }
+  margin: 0.5rem;
 }
